# bit-final-project

./: .gitignore  CLAUDE.md
experiments/eva-eval/: .gitignore  README.md  pyproject.toml
experiments/eva-eval/config/: models.yaml
experiments/eva-eval/scripts/: 01_preprocess.py  02_build_memory.py  03_run_vsibench.py  04_run_baseline.py  05_download_openeqa.py  06_preprocess_openeqa.py  07_run_openeqa.py  08_grade_openeqa.py  10_pick_visuals.py  10_render_visuals.py  11_rebuild_memory_for_selections.py  analyze_mode_collapse.py  audit_memory_objects.py  audit_retrieve_outputs.py  build_vocabulary.py  classify_agent_failures.py  compare_baselines.py  diff_agent_runs.py  extract_vsibench_target_nouns.py  inspect_agent_trace.py  inspect_grading.py  inspect_memory.py  inspect_preprocess.py
experiments/eva-eval/scripts-remote/: 00_video_download.sh  01_smoke_phase2.sh  02_smoke_phase3.sh  03_start_servers.sh  03_start_servers_bf16.sh  03_start_servers_si.sh  04_stop_servers.sh  04_stop_servers_bf16.sh  04_stop_servers_si.sh  05_smoke_phase5.sh  06_full_phase2.sh  07_full_phase3.sh  08_dev500.sh  08_subset100_bf16.sh  08_subset100_si.sh  09_full_eval.sh  10_baseline.sh  10b_authors_baseline.sh  11_openeqa_setup.sh  12_openeqa_sample.sh  13_openeqa_preprocess.sh  13a_install_habitat.sh  13b_download_hm3d.sh  13c_extract_frames.sh  14_openeqa_inspect_first.sh  15_openeqa_run.sh  16_openeqa_grade.sh  17_openeqa_inspect_results.sh  RUNBOOK.md  _env.sh  _tunnel.sh  launch.sh
experiments/eva-eval/tests/: test_agent_intermediate_steps.py  test_debug_memory.py  test_metrics.py  (+16 more)
(+124 files in other folders)
